Added new event: OB181141.

--- a/Watchlist.ipynb
+++ b/Watchlist.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -382,32 +382,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "KB19?"
+    "KB191943"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "OGLEno = \"0426\"\n",
+    "KMTno = \"1943\"\n",
     "year = \"2018\"\n",
-    "OB190426 = event(year,OGLEno=OGLEno,MOAno=MOAno,region='blg')\n",
-    "OB190426.get_URL(zoom=True,Colab=\"OGLE\")"
+    "OB180426 = event(year,OGLEno=OGLEno,KMTno=KMTno,region='blg')\n",
+    "OB180426.get_URL(zoom=True,Colab=\"OGLE\")\n",
+    "OB180426.get_URL(Colab=\"KMT\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<img src=\"http://ogle.astrouw.edu.pl/ogle4/ews/2018/data/2018/blg-0426/lcurve_s.gif\"/>"
+       "<img src=\"http://ogle.astrouw.edu.pl/ogle4/ews/2018/data/2018/blg-0426/lcurve_s.gif\" width=\"400\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"http://kmtnet.kasi.re.kr/~ulens/event/2018/data/KB181943/pysis/pysis.png\" width=\"400\"/>"
       ],
       "text/plain": [
        "<IPython.core.display.Image object>"
@@ -418,7 +432,8 @@
     }
    ],
    "source": [
-    "display(Image2(url=OB190426.OGLEURL))"
+    "display(Image2(url=OB180426.OGLEURL,width = 400))\n",
+    "display(Image2(url=OB180426.KMTURL,width = 400))"
    ]
   },
   {
@@ -437,23 +452,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "OGLEno = \"1190\"\n",
     "KMTno = \"0801\"\n",
     "year = \"2018\"\n",
-    "OB191190 = event(year,KMTno=KMTno,OGLEno=OGLEno,MOAno=MOAno,region='blg')\n",
-    "OB191190.get_URL(zoom=True,Colab=\"OGLE\")\n",
-    "OB191190.get_URL(Colab=\"KMT\")"
+    "OB181190 = event(year,KMTno=KMTno,OGLEno=OGLEno,MOAno=MOAno,region='blg')\n",
+    "OB181190.get_URL(zoom=True,Colab=\"OGLE\")\n",
+    "OB181190.get_URL(Colab=\"KMT\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -482,8 +495,74 @@
     }
    ],
    "source": [
-    "display(Image2(url=OB191190.OGLEURL,width = 400))\n",
-    "display(Image2(url=OB191190.KMTURL,width = 400))"
+    "display(Image2(url=OB181190.OGLEURL,width = 400))\n",
+    "display(Image2(url=OB181190.KMTURL,width = 400))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## OB181141"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Variable star with Paczynski curve\n",
+    "KB18?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OGLEno = \"1141\"\n",
+    "KMTno = \"0446\"\n",
+    "year = \"2018\"\n",
+    "OB181141= event(year,KMTno=KMTno,OGLEno=OGLEno,region='blg')\n",
+    "OB181141.get_URL(zoom=True,Colab=\"OGLE\")\n",
+    "OB181141.get_URL(Colab=\"KMT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"http://ogle.astrouw.edu.pl/ogle4/ews/2018/data/2018/blg-1141/lcurve_s.gif\" width=\"400\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"http://kmtnet.kasi.re.kr/~ulens/event/2018/data/KB180446/pysis/pysis.png\" width=\"400\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Image2(url=OB181141.OGLEURL,width = 400))\n",
+    "display(Image2(url=OB181141.KMTURL,width = 400))"
    ]
   },
   {
